Commit first refactoring - Update some Log.d to Log.e | add TAG properties in all class - Use internal properties instead of method properties - Update variable affectation with inference concept - Update response variable in ProcService (the equals method is working now) - Use default reformat code - Remove unused variable / import - Update layout with some conform usage (strings.xml update too)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LesTutosdeProc</string>
+    <string name="discord_img_button">Bouton de redirection pour accéder au discord</string>
+    <string name="email_image_button">Envoyer un email via l\'application</string>
 </resources>
